@@ -1,13 +1,13 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
-import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.fpl.enums.LegalRepresentativeRole;
+import uk.gov.hmcts.reform.fpl.model.CaseData;
+import uk.gov.hmcts.reform.fpl.model.Child;
+import uk.gov.hmcts.reform.fpl.model.ChildParty;
 import uk.gov.hmcts.reform.fpl.model.LegalRepresentative;
 import uk.gov.hmcts.reform.fpl.model.Respondent;
 import uk.gov.hmcts.reform.fpl.model.RespondentParty;
@@ -15,6 +15,7 @@ import uk.gov.hmcts.reform.fpl.model.common.Element;
 import uk.gov.service.notify.NotificationClient;
 import uk.gov.service.notify.NotificationClientException;
 
+import java.time.LocalDate;
 import java.util.List;
 import java.util.Map;
 
@@ -41,12 +42,9 @@ class ManageLegalRepresentativeSubmitControllerTest extends AbstractCallbackTest
         .organisation("organisation")
         .telephoneNumber("07500045455")
         .build();
-
     private static final Long CASE_ID = 12345L;
     private static final String RESPONDENT_SURNAME = "Watson";
-    private static final Respondent RESPONDENT = Respondent.builder().party(RespondentParty.builder()
-        .lastName(RESPONDENT_SURNAME).build())
-        .build();
+    private static final String CHILD_SURNAME = "Holmes";
     private static final String NOTIFICATION_REFERENCE = "localhost/" + CASE_ID;
 
     @MockBean
@@ -58,59 +56,53 @@ class ManageLegalRepresentativeSubmitControllerTest extends AbstractCallbackTest
 
     @Test
     void shouldSendNotificationWhenLegalRepresentativeAddedToCase() throws NotificationClientException {
+        CaseData caseDataBefore = buildCaseData(emptyList());
+        CaseData caseData = buildCaseData(List.of(element(LEGAL_REPRESENTATIVE)));
 
-        CaseDetails caseDetailsBefore = buildCaseData(emptyList());
-        CaseDetails caseDetails = buildCaseData(List.of(element(LEGAL_REPRESENTATIVE)));
+        postSubmittedEvent(toCallBackRequest(caseData, caseDataBefore));
 
-        CallbackRequest callbackRequest = buildCallbackRequest(caseDetailsBefore, caseDetails);
-
-        postSubmittedEvent(callbackRequest);
-
-        verify(notificationClient)
-            .sendEmail(LEGAL_REPRESENTATIVE_ADDED_TO_CASE_TEMPLATE, REPRESENTATIVE_EMAIL,
-                expectedTemplateParameters(), NOTIFICATION_REFERENCE);
+        verify(notificationClient).sendEmail(
+            LEGAL_REPRESENTATIVE_ADDED_TO_CASE_TEMPLATE,
+            REPRESENTATIVE_EMAIL,
+            expectedTemplateParameters(),
+            NOTIFICATION_REFERENCE
+        );
     }
 
     @Test
     void shouldNotSendNotificationWhenLegalRepresentativeDidNotChange() {
+        CaseData caseDataBefore = buildCaseData(List.of(element(LEGAL_REPRESENTATIVE)));
+        CaseData caseData = buildCaseData(List.of(element(LEGAL_REPRESENTATIVE)));
 
-        CaseDetails caseDetailsBefore = buildCaseData(List.of(element(LEGAL_REPRESENTATIVE)));
-        CaseDetails caseDetails = buildCaseData(List.of(element(LEGAL_REPRESENTATIVE)));
-
-        CallbackRequest callbackRequest = buildCallbackRequest(caseDetailsBefore, caseDetails);
-
-        postSubmittedEvent(callbackRequest);
+        postSubmittedEvent(toCallBackRequest(caseData, caseDataBefore));
 
         verifyNoInteractions(notificationClient);
     }
 
-    private CallbackRequest buildCallbackRequest(CaseDetails originalCaseDetails, CaseDetails caseDetails) {
-        return CallbackRequest.builder()
-            .caseDetailsBefore(originalCaseDetails)
-            .caseDetails(caseDetails)
-            .build();
-    }
-
     private Map<String, Object> expectedTemplateParameters() {
-        return ImmutableMap.of(
+        return Map.of(
             "repName", REP_NAME,
             "localAuthority", LOCAL_AUTHORITY_1_NAME,
             "firstRespondentLastName", RESPONDENT_SURNAME,
             "familyManCaseNumber", FAMILY_MAN_CASE_NO,
-            "caseUrl", "http://fake-url/cases/case-details/12345"
+            "caseUrl", "http://fake-url/cases/case-details/12345",
+            "childLastName", CHILD_SURNAME
         );
     }
 
 
-    private CaseDetails buildCaseData(List<Element<LegalRepresentative>> legalRepresentatives) {
-        return CaseDetails.builder()
+    private CaseData buildCaseData(List<Element<LegalRepresentative>> legalRepresentatives) {
+        return CaseData.builder()
             .id(CASE_ID)
-            .data(Map.of(
-                "familyManCaseNumber", FAMILY_MAN_CASE_NO,
-                "legalRepresentatives", legalRepresentatives,
-                "caseLocalAuthority", LOCAL_AUTHORITY_1_CODE,
-                "respondents1", wrapElements(RESPONDENT))
-            )
+            .familyManCaseNumber(FAMILY_MAN_CASE_NO)
+            .legalRepresentatives(legalRepresentatives)
+            .caseLocalAuthority(LOCAL_AUTHORITY_1_CODE)
+            .respondents1(wrapElements(Respondent.builder()
+                .party(RespondentParty.builder().lastName(RESPONDENT_SURNAME).build())
+                .build()))
+            .children1(wrapElements(Child.builder()
+                .party(ChildParty.builder().dateOfBirth(LocalDate.now()).lastName(CHILD_SURNAME).build())
+                .build()))
             .build();
     }
 }
