@@ -1,14 +1,14 @@
 package uk.gov.hmcts.reform.fpl.controllers;
 
-import com.google.common.collect.ImmutableMap;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.OverrideAutoConfiguration;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import uk.gov.hmcts.reform.ccd.client.model.CallbackRequest;
 import uk.gov.hmcts.reform.ccd.client.model.CaseDetails;
 import uk.gov.hmcts.reform.fpl.enums.RepresentativeRole;
 import uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences;
+import uk.gov.hmcts.reform.fpl.model.Child;
+import uk.gov.hmcts.reform.fpl.model.ChildParty;
 import uk.gov.hmcts.reform.fpl.model.Representative;
 import uk.gov.hmcts.reform.fpl.model.Respondent;
 import uk.gov.hmcts.reform.fpl.model.RespondentParty;
@@ -21,7 +21,6 @@ import uk.gov.service.notify.NotificationClientException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.UUID;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
@@ -33,9 +32,7 @@ import static uk.gov.hmcts.reform.fpl.NotifyTemplates.PARTY_ADDED_TO_CASE_BY_EMA
 import static uk.gov.hmcts.reform.fpl.NotifyTemplates.PARTY_ADDED_TO_CASE_THROUGH_DIGITAL_SERVICE_NOTIFICATION_TEMPLATE;
 import static uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences.DIGITAL_SERVICE;
 import static uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences.EMAIL;
-import static uk.gov.hmcts.reform.fpl.enums.RepresentativeServingPreferences.POST;
 import static uk.gov.hmcts.reform.fpl.service.CaseConverter.MAP_TYPE;
-import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.element;
 import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.wrapElements;
 
 @WebMvcTest(RepresentativesController.class)
@@ -43,105 +40,67 @@ import static uk.gov.hmcts.reform.fpl.utils.ElementUtils.wrapElements;
 class RepresentativeSubmittedEventControllerTest extends AbstractCallbackTest {
 
     private static final String REPRESENTATIVE_FULLNAME = "John Smith";
-
-    @MockBean
-    private NotificationClient notificationClient;
-
-    @MockBean
-    private CoreCaseDataService coreCaseDataService;
-
     private static final Long CASE_ID = 12345L;
     private static final String RESPONDENT_SURNAME = "Watson";
     private static final SyntheticCaseSummary CASE_SUMMARY = SyntheticCaseSummary.builder()
         .caseSummaryFirstRespondentLegalRep(REPRESENTATIVE_FULLNAME)
         .caseSummaryFirstRespondentLastName(RESPONDENT_SURNAME)
+        .caseSummaryNumberOfChildren(1)
         .build();
     private static final String NOTIFICATION_REFERENCE = "localhost/" + CASE_ID;
+    private static final String CHILD_LAST_NAME = "something";
+    @MockBean
+    private NotificationClient notificationClient;
+    @MockBean
+    private CoreCaseDataService coreCaseDataService;
 
     RepresentativeSubmittedEventControllerTest() {
         super("manage-representatives");
     }
 
     @Test
-    void shouldSendNotificationWhenNewPartyIsAddedOrUpdatedToCaseByEmail() throws NotificationClientException {
-        final UUID representativeId = UUID.randomUUID();
+    void shouldSendNotificationWithEmailPreference() throws NotificationClientException {
+        CaseDetails caseDetailsBefore = buildCaseData(emptyList(), emptyMap());
+        CaseDetails caseDetails = buildCaseData(wrapElements(buildRepresentative(EMAIL)), emptyMap());
 
-        Respondent respondent = buildRespondent();
-
-        Representative representative = buildRepresentative(EMAIL);
-
-        CaseDetails caseDetailsBefore = buildCaseData(respondent, emptyList(), emptyMap());
-        CaseDetails caseDetails = buildCaseData(respondent, List.of(element(representativeId, representative)),
-            emptyMap());
-
-        CallbackRequest callbackRequest = buildCallbackRequest(caseDetailsBefore, caseDetails);
-
-        postSubmittedEvent(callbackRequest);
+        postSubmittedEvent(toCallBackRequest(caseDetails, caseDetailsBefore));
 
         verify(notificationClient).sendEmail(
             PARTY_ADDED_TO_CASE_BY_EMAIL_NOTIFICATION_TEMPLATE, "test@test.com",
-            expectedTemplateParametersEmail(), NOTIFICATION_REFERENCE);
+            expectedTemplateParametersEmail(), NOTIFICATION_REFERENCE
+        );
 
-        verify(coreCaseDataService).triggerEvent(JURISDICTION,
-            CASE_TYPE,
-            CASE_ID,
-            "internal-update-case-summary",
-            caseSummary());
+        verify(coreCaseDataService).triggerEvent(
+            JURISDICTION, CASE_TYPE, CASE_ID, "internal-update-case-summary", caseSummary()
+        );
     }
 
 
     @Test
-    void shouldSendNotificationWhenNewPartyIsAddedOrUpdatedToCaseThroughDigitalService()
-        throws NotificationClientException {
-        final UUID representativeId = UUID.randomUUID();
+    void shouldSendNotificationWithDigitalPreference() throws NotificationClientException {
+        CaseDetails caseDetailsBefore = buildCaseData(emptyList(), emptyMap());
+        CaseDetails caseDetails = buildCaseData(wrapElements(buildRepresentative(DIGITAL_SERVICE)), emptyMap());
 
-        Respondent respondent = buildRespondent();
-
-        Representative representative = buildRepresentative(DIGITAL_SERVICE);
-
-        CaseDetails caseDetailsBefore = buildCaseData(respondent, emptyList(), emptyMap());
-        CaseDetails caseDetails = buildCaseData(respondent, List.of(element(representativeId, representative)),
-            emptyMap());
-
-        CallbackRequest callbackRequest = buildCallbackRequest(caseDetailsBefore, caseDetails);
-
-        postSubmittedEvent(callbackRequest);
+        postSubmittedEvent(toCallBackRequest(caseDetails, caseDetailsBefore));
 
         verify(notificationClient).sendEmail(
             PARTY_ADDED_TO_CASE_THROUGH_DIGITAL_SERVICE_NOTIFICATION_TEMPLATE, "test@test.com",
-            expectedTemplateParametersDigitalService(), NOTIFICATION_REFERENCE);
-        verify(coreCaseDataService).triggerEvent(JURISDICTION,
-            CASE_TYPE,
-            CASE_ID,
-            "internal-update-case-summary",
-            caseSummary());
+            expectedTemplateParametersDigitalService(), NOTIFICATION_REFERENCE
+        );
+        verify(coreCaseDataService).triggerEvent(
+            JURISDICTION, CASE_TYPE, CASE_ID, "internal-update-case-summary", caseSummary()
+        );
     }
 
     @Test
-    void shouldNotSendNotificationWhenNoPartiesAreUpdatedOrAddedToCase() throws NotificationClientException {
-        final UUID representativeId = UUID.randomUUID();
+    void shouldNotSendNotificationWhenNoPartiesAreUpdatedOrAddedToCase() {
+        List<Element<Representative>> representative = wrapElements(buildRepresentative(DIGITAL_SERVICE));
+        CaseDetails caseDetailsBefore = buildCaseData(representative, caseSummary());
+        CaseDetails caseDetails = buildCaseData(representative, caseSummary());
 
-        Respondent respondent = buildRespondent();
-
-        Representative representative = buildRepresentative(POST);
-
-        CaseDetails caseDetailsBefore = buildCaseData(respondent, emptyList(), caseSummary());
-        CaseDetails caseDetails = buildCaseData(respondent, List.of(element(representativeId, representative)),
-            caseSummary());
-
-        CallbackRequest callbackRequest = buildCallbackRequest(caseDetailsBefore, caseDetails);
-
-        postSubmittedEvent(callbackRequest);
+        postSubmittedEvent(toCallBackRequest(caseDetails, caseDetailsBefore));
 
         verifyNoInteractions(notificationClient, coreCaseDataService);
-    }
-
-
-    private CallbackRequest buildCallbackRequest(CaseDetails originalCaseDetails, CaseDetails caseDetails) {
-        return CallbackRequest.builder()
-            .caseDetailsBefore(originalCaseDetails)
-            .caseDetails(caseDetails)
-            .build();
     }
 
     private Representative buildRepresentative(RepresentativeServingPreferences servingPreference) {
@@ -155,32 +114,34 @@ class RepresentativeSubmittedEventControllerTest extends AbstractCallbackTest {
             .build();
     }
 
-    private Respondent buildRespondent() {
-        return Respondent.builder().party(RespondentParty.builder()
-            .lastName(RESPONDENT_SURNAME).build())
-            .build();
-    }
-
     private Map<String, Object> expectedTemplateParametersEmail() {
-        return ImmutableMap.of(
+        return Map.of(
             "familyManCaseNumber", "",
-            "firstRespondentLastName", RESPONDENT_SURNAME
+            "firstRespondentLastName", RESPONDENT_SURNAME,
+            "childLastName", CHILD_LAST_NAME
         );
     }
 
     private Map<String, Object> expectedTemplateParametersDigitalService() {
-        return ImmutableMap.of(
+        return Map.of(
             "familyManCaseNumber", "",
             "firstRespondentLastName", RESPONDENT_SURNAME,
-            "caseUrl", "http://fake-url/cases/case-details/12345"
+            "caseUrl", "http://fake-url/cases/case-details/12345",
+            "childLastName", CHILD_LAST_NAME
         );
     }
 
-    private CaseDetails buildCaseData(Respondent respondent, List<Element<Representative>> representatives,
+    private CaseDetails buildCaseData(List<Element<Representative>> representatives,
                                       Map<String, Object> caseSummary) {
         Map<String, Object> data = new HashMap<>();
         data.put("representatives", representatives);
-        data.put("respondents1", wrapElements(respondent));
+        data.put("respondents1", wrapElements(Respondent.builder()
+            .party(RespondentParty.builder().lastName(RESPONDENT_SURNAME).build())
+            .build()));
+        data.put("children1", wrapElements(Child.builder()
+            .party(ChildParty.builder().dateOfBirth(dateNow()).lastName(CHILD_LAST_NAME).build())
+            .build()
+        ));
         data.putAll(caseSummary);
         return CaseDetails.builder()
             .id(CASE_ID)
